Define HTTP API of the service
Define a simple HTTP API of the service and implement endpoints that
return mocked data.
