# src/gen/java/it/tccr/puppet/api/AccountConnectionsApi.java
@@ -1,0 +1,55 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.0.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package it.tccr.puppet.api;
+
+import it.tccr.puppet.api.model.Connection;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import javax.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+public interface AccountConnectionsApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /account-connections : Initialize connection
+     * Initialize a new account connection through tink.
+     *
+     * @return Connection successfully initialized (status code 201)
+     */
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/account-connections",
+        produces = { "application/json" }
+    )
+    default ResponseEntity<Connection> initializeConnection(
+        
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"connectionLink\" : \"https://link.tink.com/1.0/transactions/connect-accounts/?client_id=123&redirect_uri=https%3A%2F%2Fconsole.tink.com%2Fcallback\", \"accountConnectionId\" : \"connection123\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
